Started custom admin page

--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 /*
 
-Theme Name:
-Theme URI:
+Theme Name:Lunar Paper Blog Theme
+Theme URI:https://github.com/PHP-dev-temp/WP-theme-lunarblog
 Author: Toni Teofilovic
 Author URI: https://github.com/PHP-dev-temp
-Description:
+Description: The perfect theme for your Blog. Crispy, beautiful and awesome in every resolution. Ready for responsive, with multiple custom options in the Administration Panel to make this Theme your definitive ally for your daily blog.. Original Lunartheme's theme http://lunartheme.com (CCA 3.0 license).
 Version: 1.0.0
 Licence: GNU General Public License V2 or later
-Licence URI:
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: blog, sidebar, responsive, clean, minimal, icon font, custom admin options.
 
 */
